[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://ui/ritual_menu.gd" id="1_ritual_menu"]
[ext_resource type="Theme" uid="uid://c7q6510one1wh" path="res://ui/themes/Underkingdom.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.98)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.3, 0.8, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="RitualMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_ritual_menu")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -280.0
offset_right = 300.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.4, 1, 1)
theme_override_font_sizes/font_size = 20
text = "* RITUALS *"
horizontal_alignment = 1

[node name="HeaderPanel" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HeaderPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.4, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Known Rituals: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ContentContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="RitualListPanel" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="RitualListTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/RitualListPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.5, 0.9, 1)
theme_override_font_sizes/font_size = 15
text = "== KNOWN RITUALS =="
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/RitualListPanel"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="RitualList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/RitualListPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="DetailPanel" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 0

[node name="DetailVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/DetailPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="DetailColumns" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="NameColumn" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox/DetailColumns"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2
theme_override_constants/separation = 0

[node name="RitualName" type="Label" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox/DetailColumns/NameColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Ritual Name"

[node name="RitualDesc" type="Label" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox/DetailColumns/NameColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Ritual description goes here"
autowrap_mode = 2

[node name="StatsColumn" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox/DetailColumns"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="StatLine1" type="Label" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox/DetailColumns/StatsColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 13

[node name="StatLine2" type="Label" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox/DetailColumns/StatsColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.4, 1, 1)
theme_override_font_sizes/font_size = 13

[node name="StatLine3" type="Label" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox/DetailColumns/StatsColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13

[node name="ReqColumn" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox/DetailColumns"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0

[node name="ReqLine1" type="Label" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox/DetailColumns/ReqColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 13
horizontal_alignment = 2

[node name="ReqLine2" type="Label" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox/DetailColumns/ReqColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 13
horizontal_alignment = 2

[node name="ReqLine3" type="Label" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox/DetailColumns/ReqColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 13
horizontal_alignment = 2

[node name="FooterRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 16

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox/FooterRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FooterLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/DetailPanel/DetailVBox/FooterRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "[Esc/Shift+K] Close"
